Update landing page and update form functionality
Added Framer motion animations to the landing page (including slideIn,
text animations and parallex effect). Added about section and featured
posts section to the landing page. About is a simple paragraph with
framer motion text animations, and the featured posts section is a hori-
zontal scroll slide with images of to be featured posts. Also updated
styles by adding a colour theme.

Improved form functionality, including displaying the previously added
photos, displaying previous post content. Also added a featured and
location option to both the form and models. Still need to improve this
functionality, and add an option to delete previous images on the edit
form. Must also clean up the form so that all of the states aren't
being passed through individually.

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,78 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: "Oswald", sans-serif;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.btn {
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  display: flex;
+  gap: 1rem;
+}
+
+.input {
+  border: 1px black solid;
+  padding: 3px 10px;
+  width: 100%;
+}
+
+.background {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-image: url('../public/nebuta.jpg');
+  background-size: cover;
+}
+
+.back-blue {
+  background-color: #a3b2b5;
+}
+
+.back-red {
+  background-color: #ad4b02;
+}
+
+.back-brown {
+  background-color: #432910;
+}
+
+.back-gray {
+  background-color: #d7dbda;
+}
+
+.text-blue {
+  color: #a3b2b5;
+}
+
+.text-red {
+  color: #ad4b02;
+}
+
+.text-brown {
+  color: #432910;
+}
+
+.text-gray {
+  color: #d7dbda;
+}
+
+.back-img {
+  background-image: url('../public/sea.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  backdrop-filter: black;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
