--- a/app/globals.css
+++ b/app/globals.css
@@ -30,7 +30,9 @@ body {
   border-radius: 10px;
 }
 
-
+.y-scrollsnap {
+  scroll-snap-type: y mandatory;
+}
 
 .background {
   -webkit-background-clip: text;
@@ -65,6 +67,26 @@ body {
   box-shadow: 0px 0px 30px 5px var(--light-highlight);
 }
 
+.green-shadow {
+  box-shadow: 0px 0px 15px 0px green;
+}
+
 .ql-editor {
   min-height: 30vh;
+}
+
+.glow {
+  animation: shine 4s ease-in-out infinite;
+}
+
+@keyframes shine {
+  50% {
+    box-shadow: 0 0 10px var(--dark-highlight),
+                0 0 15px var(--dark-highlight),
+                0 0 60px var(--dark-highlight);
+  }
+}
+
+.snap-divs {
+  scroll-snap-align: center;
 }
