--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,30 @@
   --light-text: #000000;
 }
 
+.gradient-dark {
+  background: radial-gradient(ellipse at 50%, transparent, transparent 50%, #D40000 70%, transparent 70%);
+}
+
+.gradient-light {
+  background: radial-gradient(ellipse at 50%, transparent, transparent 50%, #9D0000 70%, transparent 70%);
+}
+
+.clip-bottom {
+  clip-path: inset(-40px -40px 0px -40px);
+}
+
+/* .gradient-2 {
+  background-image: radial-gradient(
+    farthest-corner at 40px 40px,
+    var(--dark-highlight) 0%,
+    var(--dark-background) 20%
+  );
+} */
+
+.gradient-3 {
+  background-image: radial-gradient(var(--dark-highlight) 5%, var(--dark-background) 70%);
+}
+
 body {
   font-family: "Inter", serif;
 }
@@ -64,7 +88,7 @@ body {
 }
 
 .light-red-shadow {
-  box-shadow: 0px 0px 30px 5px var(--light-highlight);
+  box-shadow: 0px 0px 20px 0px var(--light-highlight);
 }
 
 .green-shadow {
@@ -89,4 +113,8 @@ body {
 
 .snap-divs {
   scroll-snap-align: center;
+}
+
+.apple-box {
+  box-shadow: 2px 4px 12px #00000014;
 }
